--- a/trilliumnext/config.json
+++ b/trilliumnext/config.json
@@ -9,7 +9,8 @@
   "boot": "auto",
   "description": "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases.",
   "environment": {
-    "TRILIUM_DATA_DIR": "/config"
+    "TRILIUM_DATA_DIR": "/config",
+    "NO_AUTHENTICATION": "true"
   },
   "name": "Trilium Next",
   "map": [
