--- a/.github/workflows/update-upstream.yml
+++ b/.github/workflows/update-upstream.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Check & update version files
         run: |
-          ADDON_DIR="triliumnext"
+          ADDON_DIR="homeassistant-addons/trilliumnext"
           LATEST_VERSION="${{ steps.get_release.outputs.result }}"
           CURRENT_VERSION=$(jq -r '.upstream_version' "$ADDON_DIR/updater.json")
 
@@ -49,7 +49,3 @@ jobs:
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
             git add "$ADDON_DIR/updater.json" "$ADDON_DIR/config.json"
-            git commit -m "Update to upstream version $LATEST_VERSION"
-            git push
-          else
-            echo "No update needed"
