--- a/.github/workflows/trilliumnext-update-upstream-v2.yml
+++ b/.github/workflows/trilliumnext-update-upstream-v2.yml
@@ -29,16 +29,12 @@ jobs:
       - name: Extract release info
         id: extract
         run: |
-          result='${{ steps.get_release.outputs.result }}'
-          echo "RESULT: $result"
-
-          VERSION=$(echo "$result" | jq -r '.tag_name')
-          CHANGELOG=$(echo "$result" | jq -r '.body')
+          echo '${{ steps.get_release.outputs.result }}' > release.json
+          VERSION=$(jq -r .tag_name release.json)
+          CHANGELOG=$(jq -r .body release.json)
 
           echo "LATEST_VERSION=$VERSION" >> $GITHUB_ENV
-          echo "CHANGELOG<<EOF" >> $GITHUB_ENV
-          echo "$CHANGELOG" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          echo "$CHANGELOG" > changelog.txt
 
       - name: Check & update version files
         run: |
@@ -61,15 +57,13 @@ jobs:
               '.version = $v | .upstream = $v' "$ADDON_DIR/config.json" > tmp && mv tmp "$ADDON_DIR/config.json"
 
             # Save changelog
-            echo "$CHANGELOG" > "$ADDON_DIR/CHANGELOG_$LATEST_VERSION.md"
+            cp changelog.txt "$ADDON_DIR/CHANGELOG_$LATEST_VERSION.md"
 
             # Commit and push
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
             git add "$ADDON_DIR/updater.json" "$ADDON_DIR/config.json" "$ADDON_DIR/CHANGELOG_$LATEST_VERSION.md"
-            git commit -m "Update to upstream version $LATEST_VERSION
-
-$CHANGELOG"
+            git commit -F changelog.txt -m "Update to upstream version $LATEST_VERSION"
             git push
           else
             echo "No update needed"
