--- a/.github/workflows/trilliumnext-update-upstream-v2.yml
+++ b/.github/workflows/trilliumnext-update-upstream-v2.yml
@@ -12,33 +12,28 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Get latest release info from triliumnext/notes
+      - name: Get latest release metadata from triliumnext/notes
         id: get_release
         uses: actions/github-script@v7
         with:
           script: |
-            const fs = require('fs');
             const res = await github.rest.repos.getLatestRelease({
               owner: 'triliumnext',
               repo: 'notes'
             });
-
-            const data = {
-              version: res.data.tag_name,
-              changelog: res.data.body
+            return {
+              tag: res.data.tag_name,
+              body: res.data.body
             };
 
-            fs.writeFileSync('release.json', JSON.stringify(data));
-
-      - name: Set environment variables and save changelog
+      - name: Save changelog to file
         run: |
-          VERSION=$(jq -r .version release.json)
-          CHANGELOG=$(jq -r .changelog release.json)
-
-          echo "LATEST_VERSION=$VERSION" >> $GITHUB_ENV
-          echo "$CHANGELOG" > changelog.txt
+          echo "${{ toJson(steps.get_release.outputs) }}" > raw_release.json
+          echo "${{ fromJson(steps.get_release.outputs).body }}" > changelog.txt
 
       - name: Check & update version files
+        env:
+          LATEST_VERSION: ${{ fromJson(steps.get_release.outputs).tag }}
         run: |
           ADDON_DIR="./trilliumnext"
           CURRENT_VERSION=$(jq -r '.upstream_version' "$ADDON_DIR/updater.json")
@@ -69,3 +64,4 @@ jobs:
             git push
           else
             echo "No update needed"
+          fi
