--- a/.github/workflows/trilliumnext-update-upstream-v2.yml
+++ b/.github/workflows/trilliumnext-update-upstream-v2.yml
@@ -1,4 +1,4 @@
-name: V2 TrilliumNext Update Upstream Version
+name: TrilliumNext Update Upstream Version
 
 on:
   workflow_dispatch:
@@ -31,7 +31,7 @@ jobs:
         env:
           LATEST_VERSION: ${{ steps.get_release.outputs.tag }}
         run: |
-          ADDON_DIR="./trilliumnext"
+          ADDON_DIR="./homeassistant-addons/trilliumnext"
           CURRENT_VERSION=$(jq -r '.upstream_version' "$ADDON_DIR/updater.json")
 
           echo "Current: $CURRENT_VERSION | Latest: $LATEST_VERSION"
@@ -49,13 +49,13 @@ jobs:
             jq --arg v "$LATEST_VERSION" \
               '.version = $v | .upstream = $v' "$ADDON_DIR/config.json" > tmp && mv tmp "$ADDON_DIR/config.json"
 
-            # Save changelog with versioned filename
-            cp changelog.txt "$ADDON_DIR/CHANGELOG_$LATEST_VERSION.md"
+            # Overwrite main changelog file with latest changelog
+            cp changelog.txt "$ADDON_DIR/CHANGELOG.md"
 
-            # Commit and push changes
+            # Commit and push
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add "$ADDON_DIR/updater.json" "$ADDON_DIR/config.json" "$ADDON_DIR/CHANGELOG_$LATEST_VERSION.md"
+            git add "$ADDON_DIR/updater.json" "$ADDON_DIR/config.json" "$ADDON_DIR/CHANGELOG.md"
             git commit -F changelog.txt -m "Update to upstream version $LATEST_VERSION"
             git push
           else
