--- a/trilliumnext/config.json
+++ b/trilliumnext/config.json
@@ -10,7 +10,7 @@
   "description": "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases.",
   "environment": {
     "TRILIUM_DATA_DIR": "/config",
-    "NO_AUTHENTICATION": "true",
+    "NO_AUTHENTICATION": "NO_AUTHENTICATION",
     "TRILIUM_OAUTH_BASE_URL": "TRILIUM_OAUTH_BASE_URL",
     "TRILIUM_OAUTH_CLIENT_ID": "TRILIUM_OAUTH_CLIENT_ID",
     "TRILIUM_OAUTH_CLIENT_SECRET": "TRILIUM_OAUTH_CLIENT_SECRET",
@@ -22,6 +22,7 @@
     "addon_config:rw"
   ],
   "options": {
+    "NO_AUTHENTICATION": true,
     "TRILIUM_OAUTH_BASE_URL": "",
     "TRILIUM_OAUTH_CLIENT_ID": "",
     "TRILIUM_OAUTH_CLIENT_SECRET": "",
@@ -35,6 +36,7 @@
     "8080/tcp": "Web interface"
   },
   "schema": {
+    "NO_AUTHENTICATION": "bool",
     "TRILIUM_OAUTH_BASE_URL": "str",
     "TRILIUM_OAUTH_CLIENT_ID": "str",
     "TRILIUM_OAUTH_CLIENT_SECRET": "str",
