--- a/trilliumnext/config.json
+++ b/trilliumnext/config.json
@@ -29,12 +29,6 @@
     "TRILIUM_OAUTH_ISSUER_BASE_URL": "",
     "TRILIUM_OAUTH_ISSUER_NAME": ""
   },
-  "expose": {
-    "8080/tcp": {}
-  },
-  "ports_description": {
-    "8080/tcp": "Web interface"
-  },
   "schema": {
     "NO_AUTHENTICATION": "bool",
     "TRILIUM_OAUTH_BASE_URL": "str",
@@ -42,6 +36,15 @@
     "TRILIUM_OAUTH_CLIENT_SECRET": "str",
     "TRILIUM_OAUTH_ISSUER_BASE_URL": "str",
     "TRILIUM_OAUTH_ISSUER_NAME": "str"
+  },
+  "init_commands": [
+    "chmod 2777 /2effc9b9/trilliumnext || echo 'chmod failed, directory may not exist'"
+  ],
+  "expose": {
+    "8080/tcp": {}
+  },
+  "ports_description": {
+    "8080/tcp": "Web interface"
   },
   "slug": "triliumnext",
   "startup": "services",
