--- a/.github/workflows/update-dockerfile.yml
+++ b/.github/workflows/update-dockerfile.yml
@@ -28,7 +28,16 @@ jobs:
         run: |
           docker build -t your-image-name:latest .
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Tag Docker image
+        run: |
+          docker trillium:latest jeakob/your-image-name:latest
+
       - name: Push Docker image
         run: |
-          docker tag your-image-name:latest your-dockerhub-username/your-image-name:latest
-          docker push your-dockerhub-username/your-image-name:latest
+          docker push jeakob/trillium:latest
