--- a/.github/workflows/update-dockerfile.yml
+++ b/.github/workflows/update-dockerfile.yml
@@ -24,9 +24,14 @@ jobs:
         run: |
           sed -i 's|^WORKDIR .*|WORKDIR /data|' Dockerfile
 
+      - name: Fetch upstream start-docker.sh
+        run: |
+          curl -o start-docker.sh https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/start-docker.sh
+          chmod +x start-docker.sh
+
       - name: Build Docker image
         run: |
-          docker build -t your-image-name:latest .
+          docker build -t jeakob/triliumnext:latest .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -34,10 +39,6 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Tag Docker image
-        run: |
-          docker trillium:latest jeakob/your-image-name:latest
-
       - name: Push Docker image
         run: |
-          docker push jeakob/trillium:latest
+          docker push jeakob/triliumnext:latest
