--- a/.github/workflows/update-dockerfile.yml
+++ b/.github/workflows/update-dockerfile.yml
@@ -3,42 +3,45 @@ name: Update Dockerfile and Build Image
 on:
   push:
     branches:
-      - main  # Trigger on push to main branch
+      - main
   pull_request:
     branches:
-      - main  # Trigger on PR to main branch
+      - main
 
 jobs:
   update-dockerfile:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout your repository
         uses: actions/checkout@v3
 
-      - name: Fetch upstream Dockerfile
+      - name: Clone TriliumNext upstream repo
         run: |
-          curl -o Dockerfile https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/Dockerfile.alpine
+          git clone --depth=1 https://github.com/TriliumNext/Notes.git upstream
 
-      - name: Update WORKDIR to /data
+      - name: Copy required files for build context
+        run: |
+          cp upstream/apps/server/Dockerfile.alpine ./Dockerfile
+          cp upstream/apps/server/start-docker.sh ./start-docker.sh
+          chmod +x ./start-docker.sh
+          # Copy the entire docker folder that includes pnpm-workspace.yaml
+          cp -r upstream/apps/server/docker ./docker
+
+      - name: Update WORKDIR in Dockerfile to /data
         run: |
           sed -i 's|^WORKDIR .*|WORKDIR /data|' Dockerfile
-
-      - name: Fetch upstream start-docker.sh
-        run: |
-          curl -o start-docker.sh https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/start-docker.sh
-          chmod +x start-docker.sh
 
       - name: Build Docker image
         run: |
           docker build -t jeakob/triliumnext:latest .
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker image
+      - name: Push Docker image to DockerHub
         run: |
           docker push jeakob/triliumnext:latest
