--- a/.github/workflows/update-dockerfile.yml
+++ b/.github/workflows/update-dockerfile.yml
@@ -1,4 +1,4 @@
-name: Build and Push TriliumNext Docker Image
+name: Update Dockerfile, Build and Push Image
 
 on:
   push:
@@ -9,47 +9,53 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout your repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Clone upstream TriliumNext repo
+      - name: Fetch upstream Dockerfile
         run: |
-          git clone --depth=1 https://github.com/TriliumNext/Notes.git upstream
+          curl -o Dockerfile https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/Dockerfile.alpine
 
-      - name: Copy server files to build context
+      - name: Fetch upstream start-docker.sh
         run: |
-          cp -r upstream/apps/server ./server
+          curl -o start-docker.sh https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/start-docker.sh
+
+      - name: Fetch upstream pnpm-workspace.yaml
+        run: |
+          curl -o pnpm-workspace.yaml https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/docker/pnpm-workspace.yaml
+
+      - name: Update WORKDIR to /data in Dockerfile
+        run: |
+          sed -i 's|^WORKDIR .*|WORKDIR /data|' Dockerfile
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies and build Trilium frontend
         working-directory: ./server
         run: |
-          apk add --no-cache nodejs npm  # or use Node.js setup action
-          npm install -g pnpm
           pnpm install
           pnpm run build
 
-      - name: Copy start script
-        run: cp upstream/apps/server/start-docker.sh ./server/start-docker.sh && chmod +x ./server/start-docker.sh
-
-      - name: Prepare Dockerfile
-        run: |
-          cp upstream/apps/server/Dockerfile.alpine ./Dockerfile
-          sed -i 's|^WORKDIR .*|WORKDIR /data|' Dockerfile
-
       - name: Build Docker image
         run: |
-          docker build -t jeakob/triliumnext:latest -f Dockerfile ./server
+          docker build -t jeakob/triliumnext:latest .
 
-      - name: Log in to DockerHub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push Docker image to DockerHub
+      - name: Push Docker image to Docker Hub
         run: |
           docker push jeakob/triliumnext:latest
