--- a/.github/workflows/update-dockerfile.yml
+++ b/.github/workflows/update-dockerfile.yml
@@ -9,30 +9,22 @@ on:
       - main
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout your repo
         uses: actions/checkout@v3
 
-      - name: Fetch upstream Dockerfile
+      - name: Clone upstream TriliumNext repo
         run: |
-          curl -o Dockerfile https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/Dockerfile.alpine
-
-      - name: Fetch upstream start-docker.sh
-        run: |
-          curl -o start-docker.sh https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/start-docker.sh
-
-      - name: Fetch upstream pnpm-workspace.yaml
-        run: |
-          curl -o pnpm-workspace.yaml https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/docker/pnpm-workspace.yaml
+          git clone --depth=1 https://github.com/TriliumNext/Notes.git
 
       - name: Update WORKDIR to /data in Dockerfile
         run: |
-          sed -i 's|^WORKDIR .*|WORKDIR /data|' Dockerfile
+          sed -i 's|^WORKDIR .*|WORKDIR /data|' Notes/apps/server/Dockerfile.alpine
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
@@ -40,15 +32,15 @@ jobs:
       - name: Install pnpm
         run: npm install -g pnpm
 
-      - name: Install dependencies and build Trilium frontend
-        working-directory: ./server
+      - name: Install dependencies and build
+        working-directory: Notes/apps/server
         run: |
           pnpm install
           pnpm run build
 
       - name: Build Docker image
-        run: |
-          docker build -t jeakob/triliumnext:latest .
+        working-directory: Notes/apps/server
+        run: docker build -t jeakob/triliumnext:latest .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -56,6 +48,6 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push Docker image to Docker Hub
+      - name: Push Docker image
         run: |
           docker push jeakob/triliumnext:latest
