--- a/.github/workflows/update-dockerfile.yml
+++ b/.github/workflows/update-dockerfile.yml
@@ -1,4 +1,4 @@
-name: Update Dockerfile, Build and Push Image
+name: Build and Push Trilium Docker Image
 
 on:
   push:
@@ -13,29 +13,49 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout your repo
         uses: actions/checkout@v3
 
-      - name: Fetch upstream Dockerfile and required files
+      - name: Install pnpm
+        run: |
+          npm install -g pnpm
+
+      - name: Clone upstream Trilium repo
+        run: |
+          git clone --depth 1 https://github.com/TriliumNext/Notes.git
+
+      - name: Install dependencies and build
+        working-directory: Notes/apps/server
+        run: |
+          pnpm install
+          pnpm build
+
+      - name: Fetch upstream Dockerfile
         run: |
           curl -o Dockerfile https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/Dockerfile.alpine
-          curl -o start-docker.sh https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/start-docker.sh
-          mkdir -p docker
-          curl -o docker/pnpm-workspace.yaml https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/docker/pnpm-workspace.yaml
-          curl -o docker/package.json https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/docker/package.json
-
 
       - name: Update WORKDIR to /data in Dockerfile
-        run: sed -i 's|^WORKDIR .*|WORKDIR /data|' Dockerfile
+        run: |
+          sed -i 's|^WORKDIR .*|WORKDIR /data|' Dockerfile
 
-      - name: Log in to Docker Hub
+      - name: Copy built files into build context
+        run: |
+          cp -r Notes/apps/server/dist ./dist
+          cp -r Notes/apps/server/package.json ./package.json
+          cp -r Notes/apps/server/pnpm-workspace.yaml ./pnpm-workspace.yaml
+          cp -r Notes/apps/server/start-docker.sh ./start-docker.sh
+          # copy any other required files from upstream server dir
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t jeakob/trilium-next:latest .
+        run: |
+          docker build -t jeakob/trilium-custom:latest .
 
-      - name: Push Docker image to Docker Hub
-        run: docker push jeakob/trilium-next:latest
+      - name: Push Docker image
+        run: |
+          docker push jeakob/trilium-custom:latest
