--- a/.github/workflows/update-dockerfile.yml
+++ b/.github/workflows/update-dockerfile.yml
@@ -17,34 +17,30 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install pnpm
-        run: |
-          npm install -g pnpm
+        run: npm install -g pnpm
 
       - name: Clone upstream Trilium repo
-        run: |
-          git clone --depth 1 https://github.com/TriliumNext/Notes.git
+        run: git clone --depth 1 https://github.com/TriliumNext/Notes.git
 
-      - name: Install dependencies and build
+      - name: Install dependencies and build server
         working-directory: Notes/apps/server
         run: |
           pnpm install
-          pnpm build
+          pnpm run build
 
       - name: Fetch upstream Dockerfile
-        run: |
-          curl -o Dockerfile https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/Dockerfile.alpine
+        run: curl -o Dockerfile https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/Dockerfile.alpine
 
       - name: Update WORKDIR to /data in Dockerfile
-        run: |
-          sed -i 's|^WORKDIR .*|WORKDIR /data|' Dockerfile
+        run: sed -i 's|^WORKDIR .*|WORKDIR /data|' Dockerfile
 
-      - name: Copy built files into build context
+      - name: Prepare Docker build context
         run: |
           cp -r Notes/apps/server/dist ./dist
-          cp -r Notes/apps/server/package.json ./package.json
-          cp -r Notes/apps/server/pnpm-workspace.yaml ./pnpm-workspace.yaml
-          cp -r Notes/apps/server/start-docker.sh ./start-docker.sh
-          # copy any other required files from upstream server dir
+          cp Notes/apps/server/package.json ./
+          cp Notes/pnpm-workspace.yaml ./
+          cp Notes/apps/server/start-docker.sh ./
+          # Copy any other required files here
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -53,9 +49,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: |
-          docker build -t jeakob/trilium-custom:latest .
+        run: docker build -t jeakob/trilium-custom:latest .
 
       - name: Push Docker image
-        run: |
-          docker push jeakob/trilium-custom:latest
+        run: docker push jeakob/trilium-custom:latest
