--- a/.github/workflows/update-dockerfile.yml
+++ b/.github/workflows/update-dockerfile.yml
@@ -22,11 +22,13 @@ jobs:
       - name: Clone upstream Trilium repo
         run: git clone --depth 1 https://github.com/TriliumNext/Notes.git
 
-      - name: Install dependencies and build server
-        working-directory: Notes/apps/server
-        run: |
-          pnpm install
-          pnpm run build
+      - name: Install dependencies (root workspace)
+        working-directory: Notes
+        run: pnpm install
+
+      - name: Build server app
+        working-directory: Notes
+        run: pnpm run build --filter apps/server...
 
       - name: Fetch upstream Dockerfile
         run: curl -o Dockerfile https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/Dockerfile.alpine
@@ -40,7 +42,7 @@ jobs:
           cp Notes/apps/server/package.json ./
           cp Notes/pnpm-workspace.yaml ./
           cp Notes/apps/server/start-docker.sh ./
-          # Copy any other required files here
+          # Add any other required files here
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
