--- a/.github/workflows/update-dockerfile.yml
+++ b/.github/workflows/update-dockerfile.yml
@@ -27,8 +27,8 @@ jobs:
         run: pnpm install
 
       - name: Build server app
-        working-directory: Notes
-        run: pnpm run build --filter apps/server...
+        working-directory: Notes/apps/server
+        run: pnpm run client:build
 
       - name: Fetch upstream Dockerfile
         run: curl -o Dockerfile https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/Dockerfile.alpine
@@ -42,7 +42,7 @@ jobs:
           cp Notes/apps/server/package.json ./
           cp Notes/pnpm-workspace.yaml ./
           cp Notes/apps/server/start-docker.sh ./
-          # Add any other required files here
+          # Copy any other required files here
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
