--- a/.github/workflows/update-dockerfile.yml
+++ b/.github/workflows/update-dockerfile.yml
@@ -16,19 +16,23 @@ jobs:
       - name: Checkout your repo
         uses: actions/checkout@v3
 
-      - name: Install pnpm
-        run: npm install -g pnpm
+      - name: Install pnpm and nx
+        run: |
+          npm install -g pnpm
+          pnpm add -g nx
 
       - name: Clone upstream Trilium repo
         run: git clone --depth 1 https://github.com/TriliumNext/Notes.git
 
-      - name: Install dependencies (root workspace)
+      - name: Install dependencies (workspace root)
         working-directory: Notes
         run: pnpm install
 
-      - name: Build server app
-        working-directory: Notes/apps/server
-        run: pnpm run client:build
+      - name: Build client and server with Nx
+        working-directory: Notes
+        run: |
+          npx nx run client:build
+          npx nx run server:build
 
       - name: Fetch upstream Dockerfile
         run: curl -o Dockerfile https://raw.githubusercontent.com/TriliumNext/Notes/develop/apps/server/Dockerfile.alpine
@@ -38,13 +42,16 @@ jobs:
 
       - name: Prepare Docker build context
         run: |
+          mkdir -p docker
+          # Copy the built server dist output
           cp -r Notes/apps/server/dist ./dist
+          # Copy package.json and pnpm-workspace.yaml for the Docker build
           cp Notes/apps/server/package.json ./
           cp Notes/pnpm-workspace.yaml ./
+          # Copy the startup script
           cp Notes/apps/server/start-docker.sh ./
-          # Copy any other required files here
 
-      - name: Login to Docker Hub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
