--- a/trilliumnext/config.json
+++ b/trilliumnext/config.json
@@ -19,7 +19,7 @@
   },
   "name": "Trilium Next - JB",
   "map": [
-    "addon_config:rw"
+    "share:rw"
   ],
   "options": {
     "NO_AUTHENTICATION": true,
@@ -37,9 +37,6 @@
     "TRILIUM_OAUTH_ISSUER_BASE_URL": "str",
     "TRILIUM_OAUTH_ISSUER_NAME": "str"
   },
-  "init_commands": [
-    "chmod 2777 /2effc9b9/trilliumnext || echo 'chmod failed, directory may not exist'"
-  ],
   "expose": {
     "8080/tcp": {}
   },
@@ -54,5 +51,6 @@
   "ingress": true,
   "ingress_port": 8080,
   "image": "triliumnext/notes",
-  "webui": "[PROTO:ssl]://[HOST]:[PORT:8080]"
+  "webui": "[PROTO:ssl]://[HOST]:[PORT:8080]",
+  "tmpfs": "size=100m,uid=1000,gid=1000"
 }
