--- a/trilliumnext/config.json
+++ b/trilliumnext/config.json
@@ -9,7 +9,7 @@
   "boot": "auto",
   "description": "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases.",
   "environment": {
-    "TRILIUM_DATA_DIR": "/data",
+    "TRILIUM_DATA_DIR": "/share/trilium",
     "NO_AUTHENTICATION": "NO_AUTHENTICATION",
     "TRILIUM_OAUTH_BASE_URL": "TRILIUM_OAUTH_BASE_URL",
     "TRILIUM_OAUTH_CLIENT_ID": "TRILIUM_OAUTH_CLIENT_ID",
@@ -19,11 +19,8 @@
   },
   "name": "Trilium Next - JB",
   "map": [
-    "media:rw"
+    "share:rw"
   ],
-  "init": false,
-  "privileged": ["SYS_ADMIN"],
-  "full_access": false,
   "options": {
     "NO_AUTHENTICATION": true,
     "TRILIUM_OAUTH_BASE_URL": "",
