--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -9,35 +9,35 @@ ingress_port: 8080
 ingress_stream: true
 panel_icon: mdi:notebook-multiple
 panel_title: Trilium Notes
+webui: "http://[HOST]:[PORT:8080]/"
 arch:
   - amd64
   - aarch64
 startup: application
 boot: auto
 init: false
-
-# Map the data directory
 map:
-  - /home/trilium/trilium-data
-
-# No external ports needed when using ingress
-ports: {}
-
+  - type: data
+    read_only: false
+    path: /home/node/trilium-data
+ports:
+  "8080/tcp": 8080
 options:
+# language: en
   timezone: "Europe/Berlin"
-  log_level: "info" 
+  log_level: "info"
   https_only: false
-
 schema:
+#  language: |
+#    list(ar|br|ca|cs|de|en|eo|es|fa|fr|hi|it|ja|ko|kz|nl|pl|pt|ru|sv|tl|tr|uk|uz|vi|zh)
   timezone: |
-    list(Europe/Berlin|America/New_York|UTC|Europe/London|Asia/Tokyo|Australia/Sydney)
+    list(Europe/Berlin|America/New_York|UTC|Asia/Berlin|Europe/London|Asia/Tokyo|Australia/Sydney)
   log_level: "list(trace|debug|info|notice|warning|error|fatal)"
   https_only: "bool"
-
 environment:
-  TRILIUM_DATA_DIR: "/home/trilium/trilium-data"
+  TRILIUM_DATA_DIR: "/home/node/trilium-data"
   TZ: "{{ options.timezone }}"
   NODE_ENV: "production" 
   HOST: "0.0.0.0"
-  PORT: "8080"
   TRILIUM_LOG_LEVEL: "{{ options.log_level }}"
+#  TRILIUM_LANGUAGE: "{{ options.language }}"
