--- a/trillium/Dockerfile
+++ b/trillium/Dockerfile
@@ -2,24 +2,11 @@ ARG BUILD_FROM
 FROM ${BUILD_FROM}
 
 # Set shell
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-
-# Install dependencies
-RUN apk add --no-cache \
-    nodejs \
-    npm \
-    wget \
-    curl
+SHELL ["/bin/sh", "-c"]
 
 # Copy data for add-on
 COPY run.sh /
 RUN chmod a+x /run.sh
-
-# Create trilium user and data directory
-RUN addgroup -g 1000 trilium && \
-    adduser -D -s /bin/bash -u 1000 -G trilium trilium && \
-    mkdir -p /home/trilium/trilium-data && \
-    chown -R trilium:trilium /home/trilium
 
 # Home Assistant requires these labels
 LABEL \
@@ -31,8 +18,6 @@ LABEL \
 
 # Expose the port
 EXPOSE 8080
-
-# Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s \
   CMD wget --quiet --tries=1 --spider http://localhost:8080/ || exit 1
 
