--- a/trillium/Dockerfile
+++ b/trillium/Dockerfile
@@ -4,14 +4,14 @@ ARG BUILD_VERSION=unknown
 FROM ${BUILD_FROM}
 
 # Use sh shell
-SHELL ["/bin/sh", "-c"]
+SHELL ["/bin/bash", "-c"]
 
 # Copy addon startup script and make executable
 COPY run.sh /
 RUN chmod a+x /run.sh
 
 # Install socat and wget (needed for healthcheck)
-RUN apt-get update && apt-get install -y socat wget && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y bash socat wget && rm -rf /var/lib/apt/lists/*
 
 # Home Assistant labels for metadata
 LABEL \
