--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -59,5 +59,7 @@ environment:
   HOST: "0.0.0.0"
   TRILIUM_LOG_LEVEL: "{{ options.log_level }}"
 #  TRILIUM_LANGUAGE: "{{ options.language }}"
+  EXPOSE_RAW_PORT: "{{ options.EXPOSE_RAW_PORT }}"
+}
 
 upstream: v0.95.0
