--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -1,6 +1,6 @@
 ---
 name: "TriliumNext Notes"
-version: "v0.95.0"
+version: "v2025.03.12"
 slug: trilium_next
 description: "Hierarchical note-taking application with encryption, Markdown support, and personal knowledge base features"
 url: "https://github.com/triliumnext/trilium"
@@ -16,43 +16,28 @@ arch:
 startup: application
 boot: auto
 init: false
-
 map:
   - type: data
-    path: /home/node/trilium-data
     read_only: false
-
-expose:
-  "8080/tcp": {}
-
-ports_description:
-  "8080/tcp": "Optional web interface access on port 8080"
-
+    path: /home/node/trilium-data
+ports:
+  "8080/tcp": 8080
 options:
-  EXPOSE_RAW_PORT: false
-  NO_AUTHENTICATION: true
-  TRILIUM_OAUTH_BASE_URL: ""
-  TRILIUM_OAUTH_CLIENT_ID: ""
-  TRILIUM_OAUTH_CLIENT_SECRET: ""
-  TRILIUM_OAUTH_ISSUER_BASE_URL: ""
-  TRILIUM_OAUTH_ISSUER_NAME: ""
-  timezone: "Europe/London"
+# language: en
+  timezone: "Europe/Berlin"
   log_level: "info"
   https_only: false
-
 schema:
-  EXPOSE_RAW_PORT: bool
-  NO_AUTHENTICATION: bool
-  TRILIUM_OAUTH_BASE_URL: str
-  TRILIUM_OAUTH_CLIENT_ID: str
-  TRILIUM_OAUTH_CLIENT_SECRET: str
-  TRILIUM_OAUTH_ISSUER_BASE_URL: str
-  TRILIUM_OAUTH_ISSUER_NAME: str
-  timezone: "list(Europe/Berlin|America/New_York|UTC|Asia/Berlin|Europe/London|Asia/Tokyo|Australia/Sydney)"
+#  language: |
+#    list(ar|br|ca|cs|de|en|eo|es|fa|fr|hi|it|ja|ko|kz|nl|pl|pt|ru|sv|tl|tr|uk|uz|vi|zh)
+  timezone: |
+    list(Europe/Berlin|America/New_York|UTC|Asia/Berlin|Europe/London|Asia/Tokyo|Australia/Sydney)
   log_level: "list(trace|debug|info|notice|warning|error|fatal)"
-  https_only: bool
-
+  https_only: "bool"
 environment:
   TRILIUM_DATA_DIR: "/home/node/trilium-data"
-  NODE_ENV: "production"
+  TZ: "{{ options.timezone }}"
+  NODE_ENV: "production" 
   HOST: "0.0.0.0"
+  TRILIUM_LOG_LEVEL: "{{ options.log_level }}"
+#  TRILIUM_LANGUAGE: "{{ options.language }}"
