--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -1,8 +1,11 @@
 name: "TriliumNext Notes"
 version: "v2025.03.12"
-slug: trilium_next
-description: "Hierarchical note-taking application with encryption, Markdown support, and personal knowledge base features"
+slug: "trilium_next"
+description: >-
+  Hierarchical note-taking application with encryption,
+  Markdown support, and personal knowledge base features
 url: "https://github.com/triliumnext/trilium"
+
 ingress: true
 ingress_port: 8080
 ingress_stream: true
@@ -23,75 +26,71 @@ map:
     read_only: false
     path: /home/node/trilium-data
 
+# ▶ Default values for your add-on’s options
 options:
-  NO_AUTHENTICATION:
-    description: "Disable authentication"
-    type: bool
-    default: true
-  TRILIUM_OAUTH_BASE_URL:
-    description: "OAuth base URL"
-    type: str
-    default: ""
-  TRILIUM_OAUTH_CLIENT_ID:
-    description: "OAuth client ID"
-    type: str
-    default: ""
-  TRILIUM_OAUTH_CLIENT_SECRET:
-    description: "OAuth client secret"
-    type: str
-    default: ""
-  TRILIUM_OAUTH_ISSUER_BASE_URL:
-    description: "OAuth issuer base URL"
-    type: str
-    default: ""
-  TRILIUM_OAUTH_ISSUER_NAME:
-    description: "OAuth issuer name"
-    type: str
-    default: ""
+  NO_AUTHENTICATION: true
+  TRILIUM_OAUTH_BASE_URL: ""
+  TRILIUM_OAUTH_CLIENT_ID: ""
+  TRILIUM_OAUTH_CLIENT_SECRET: ""
+  TRILIUM_OAUTH_ISSUER_BASE_URL: ""
+  TRILIUM_OAUTH_ISSUER_NAME: ""
+  timezone: "Europe/London"
+  log_level: "info"
+  https_only: false
 
+# ▶ JSON-schema for HA’s config UI
+schema:
+  NO_AUTHENTICATION:
+    type: boolean
+
+  TRILIUM_OAUTH_BASE_URL:
+    type: string
+
+  TRILIUM_OAUTH_CLIENT_ID:
+    type: string
+
+  TRILIUM_OAUTH_CLIENT_SECRET:
+    type: string
+
+  TRILIUM_OAUTH_ISSUER_BASE_URL:
+    type: string
+
+  TRILIUM_OAUTH_ISSUER_NAME:
+    type: string
+
+  timezone:
+    type: select
+    options:
+      - Europe/Berlin
+      - America/New_York
+      - UTC
+      - Asia/Berlin
+      - Europe/London
+      - Asia/Tokyo
+      - Australia/Sydney
+
+  log_level:
+    type: select
+    options:
+      - trace
+      - debug
+      - info
+      - notice
+      - warning
+      - error
+      - fatal
+
+  https_only:
+    type: boolean
+
+# Exposed port (not strictly needed with ingress, but harmless)
 expose:
-  "8080/tcp": {}
+  - 8080/tcp
 
 ports_description:
   "8080/tcp": "Web interface"
 
-schema:
-  NO_AUTHENTICATION: bool
-  TRILIUM_OAUTH_BASE_URL: str
-  TRILIUM_OAUTH_CLIENT_ID: str
-  TRILIUM_OAUTH_CLIENT_SECRET: str
-  TRILIUM_OAUTH_ISSUER_BASE_URL: str
-  TRILIUM_OAUTH_ISSUER_NAME: str
-
-timezone: >
-  list(
-    Europe/Berlin |
-    America/New_York |
-    UTC |
-    Asia/Berlin |
-    Europe/London |
-    Asia/Tokyo |
-    Australia/Sydney
-  )
-
-log_level:
-  description: "Log level"
-  type: list
-  options:
-    - trace
-    - debug
-    - info
-    - notice
-    - warning
-    - error
-    - fatal
-  default: info
-
-https_only:
-  description: "Require HTTPS"
-  type: bool
-  default: false
-
+# Environment for the container
 environment:
   TRILIUM_DATA_DIR: "/home/node/trilium-data"
   TZ: "{{ options.timezone }}"
